# Brand_Hallucination-Monitor

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini  config.py  database.py  logging_config.py  main.py
apps/api/auth/: api_keys.py  context.py  jwt.py
apps/api/graph/: client.py  queries.py  seeder.py
apps/api/middleware/: error_handler.py  metrics.py  request_id.py  security_headers.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py  002_add_brand_mentions.py  003_add_sprint3_tables.py  004_add_sps_scores.py  005_add_probe_results.py  006_add_auth_tables.py  007_add_sprint8_tables.py  008_add_infra_costs.py  009_add_sprint10_tables.py
apps/api/models/: __init__.py  api_key.py  brand.py  competitor.py  db.py  embedding_cost.py  embedding_result.py  infra_cost.py  mention.py  onboarding.py  probe_result.py  report.py  scan_job.py  sps_score.py  webhook.py
apps/api/routers/: admin.py  alert_rules.py  alerts.py  auth.py  brands.py  competitors.py  costs.py  graph.py  mentions.py  onboarding.py  organizations.py  reports.py  scan_jobs.py  vector_map.py
apps/api/services/: alert_dispatcher.py  alert_rules.py  circuit_breaker.py  cost_guard.py  feature_flags.py  onboarding_emails.py  report_generator.py
apps/dashboard/: next.config.mjs  next.config.ts  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/components/: demo-init.tsx  error-boundary.tsx  eyebrow.tsx  footer.tsx  hallucination-card.tsx  intercom-widget.tsx  kpi-card.tsx  nav.tsx  nps-survey.tsx  product-tour.tsx  severity-badge.tsx  sps-trend-chart.tsx  vector-scatter.tsx
apps/dashboard/src/hooks/: use-alerts.ts  use-brands.ts  use-costs.ts  use-reports.ts  use-scan.ts  use-settings.ts
apps/dashboard/src/lib/: api-client.ts  brand-tokens.ts  posthog.ts  store.ts
apps/workers/: celery_app.py
apps/workers/consumers/: __init__.py  base.py  deduplication.py  enrichment.py  routing.py
apps/workers/kafka/: __init__.py  client.py  schemas.py  topics.py
apps/workers/producers/: __init__.py  base.py  reddit.py  review.py  rss.py
apps/workers/tasks/: embedding.py  ingestion.py  scan.py
data/fixtures/: hallucination_test_cases.json
data/schemas/: brand_manifest.py
docs/runbooks/: high_embedding_cost.md  kafka_consumer_lag.md  on_call.md  qdrant_unavailable.md
docs/security/: pentest_scope.md  soc2_gap_analysis.md
infra/airflow/: requirements.txt
infra/airflow/dags/: dag_backup.py  dag_competitor_benchmark.py  dag_embedding_batch.py  dag_intent_cluster_refresh.py  dag_llm_probing.py  dag_onboarding_emails.py  dag_weekly_report.py
infra/kafka/: create_topics.sh  register_schemas.sh
infra/kafka/schemas/: brand_mention_event.avsc  competitor_mention_event.avsc  review_event.avsc
infra/monitoring/: prometheus.yml
infra/monitoring/alerts/: kafka_lag.yml
infra/monitoring/grafana/dashboards/: airflow_dag_health.json  embedding_costs.json  kafka_lag.json
infra/neo4j/: schema.cypher  seed.cypher
infra/postgres/: init.sql
ml/embeddings/: qdrant_store.py  service.py
ml/hallucination/: classifier.py  prober.py
ml/scoring/: proximity.py
planning/: CLAUDE.md
scripts/: healthcheck.sh  init_qdrant_collections.py  init_qdrant_quantization.py  seed_data.py  seed_neo4j.py
tests/: conftest.py
tests/integration/: test_dag_embedding.py  test_graph_seeder.py  test_hallucination_pipeline.py  test_mention_api.py  test_multi_tenant_isolation.py  test_pipeline.py  test_reports_api.py
tests/k6/: load_test.js
tests/unit/: test_alert_dispatcher.py  test_alert_rules.py  test_auth_api_keys.py  test_auth_jwt.py  test_consumers.py  test_embedding_service.py  test_graph_queries.py  test_hallucination_classifier.py  test_health.py  test_kafka_schemas.py  test_prober.py  test_producers.py  test_report_generator.py  test_scoring.py
(+22 files in other folders)
