[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucin8"
version = "0.1.0"
description = "SGE Semantic Dominance & Brand Hallucination Monitor"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Task queue
    "celery>=5.4.0",
    "redis>=5.0.0",
    # Logging
    "structlog>=24.2.0",
    # HTTP
    "httpx>=0.27.0",
    # Observability
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "factory-boy>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps/api", "apps/workers"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "apps/workers", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PTH", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps/api", "apps/workers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=apps/api --cov-report=term-missing"

[tool.coverage.run]
source = ["apps/api", "apps/workers"]
omit = ["*/migrations/*", "*/tests/*"]
